--- a/_posts/WebSecurity/2016-11-20-CTF0.md
+++ b/_posts/WebSecurity/2016-11-20-CTF0.md
@@ -9,3 +9,7 @@ category: WebSecurity
 
 ### CTF Material of History:
   - [https://github.com/ctfs](https://github.com/ctfs)
+
+### Wargames  & Labs:
+  - [https://pwnable.kr](http://pwnable.kr/)
+  - [http://smashthestack.org](http://smashthestack.org/)
