--- a/_posts/WebSecurity/2016-11-20-CTF0.md
+++ b/_posts/WebSecurity/2016-11-20-CTF0.md
@@ -1,8 +1,22 @@
 ---
 layout: single
-title: CTF Intro
+title: Intro
 category: WebSecurity
 ---
+
+
+- ### Hacking
+  - Understanding System
+  - Breaking System
+  - Reconstruction
+
+
+### Learning Guide
+
+  - CMU 18-447 Introduction to Computer Architecture
+    -[https://www.ece.cmu.edu/~ece447/s15/doku.php](https://www.ece.cmu.edu/~ece447/s15/doku.php)
+
+# CTF
 
 ### CTF Battle Conference schedule:
   - [https://ctftime.org/](https://ctftime.org/)
