--- a/_posts/WebSecurity/2016-11-20-CTF0.md
+++ b/_posts/WebSecurity/2016-11-20-CTF0.md
@@ -4,19 +4,55 @@ title: Intro
 category: WebSecurity
 ---
 
+### Hacking Level
 
 - ### Hacking
   - Understanding System
   - Breaking System
   - Reconstruction
 
-
 ### Learning Guide
 
-  - CMU 18-447 Introduction to Computer Architecture
+  - CMU 18-447 Introduction to Computer Architecture (CPU, Cache)
     -[https://www.ece.cmu.edu/~ece447/s15/doku.php](https://www.ece.cmu.edu/~ece447/s15/doku.php)
+    - Labs: Implement a MIPS CPU using Verilog
 
-# CTF
+  - Stanford CS143 - Compilers
+    - [http://web.stanford.edu/class/cs143](http://web.stanford.edu/class/cs143)
+    - PA: Compilers for Cool Language
+
+  - MIT 6.828 - Operating System Engineering
+    - [https://pods.csall.mit.edu/6.828/2016/]
+    - Labs: Implement jobs
+    - Xv6, a simple Unix-like teaching operating system
+
+### Practice
+
+  - Network Protocol
+    - HTTP/SMB/DNS/UPnP Server
+
+  - Script Engine
+    - JavaScript Engine
+    - ActionScript Engine
+    - PHP/Java Sandbox Escape
+
+  - Kernel
+    - Linux /Android
+    - Freebsd
+    - Apple IOS
+    - Sony PS4
+
+<br/>
+
+
+
+## CTF
+  - 9947 CTF
+  - CCC CTF
+  - HITCON CTF
+  - Plaid CTF
+  - Boston Key Party
+  - DEF CON CTF
 
 ### CTF Battle Conference schedule:
   - [https://ctftime.org/](https://ctftime.org/)
@@ -31,3 +67,17 @@ category: WebSecurity
   - [https://pentesterlab.com](https://pentesterlab.com/)
   - [http://overthewire.org/wargames/](http://overthewire.org/wargames/)
   - [https://exploit-exercises.com/](https://exploit-exercises.com/)
+
+
+
+  <div style="max-width:640px; margin:0 auto 10px;" >
+  <div
+  style="position: relative;
+  width:100%;
+  padding-bottom:56.25%;
+  height:0;">
+
+<iframe width="854" height="480" src="https://www.youtube.com/embed/8w052d0yM14" frameborder="0" allowfullscreen></iframe>
+
+  </div>
+  </div>
